2007-06-23  Brian Bidulock  <bidulock@openss7.org>

	* m4/kernel.m4: fix up cflagcheck for openSUSE 10.2
	* doc/manual/news.texi: updates fore release
	* m4/dist.m4: handle openSUSE codename
	* scripts/texi/compat.texi: spelling s/Edge/Etch/

2007-06-22  Brian Bidulock  <bidulock@openss7.org>

	* am/openss7.am: add uninstall-am to remove target
	- wrong subdirs in MY_REVERSIVE_TARGETS
	- skip unfriendly subdirectories on reversive targets

2007-06-21  Brian Bidulock  <bidulock@openss7.org>

	* am/netconfig.am: fix up problems with libtirpc
	* texi/testsuite.texi: fix double named example
	* doc/manual/bugs.texi: doc updates for release
	* doc/manual/configure.texi: doc updates for release
	* doc/manual/descrip.texi: doc updates for release
	* doc/manual/openss7.texi: doc updates for release
	* doc/manual/releases.texi: doc updates for release
	* doc/manual/rpm.texi: doc updates for release
	* doc/manual/todo.texi: doc updates for release
	* doc/manual/tree.texi: doc updates for release
	* scripts/texi/testsuite.texi: fix double named example

2007-06-20  Brian Bidulock  <bidulock@openss7.org>

	* scripts/texi/compat.texi: update newly supported distros and kernels
	* scripts/texi/versions.texi: update versions
	* doc/manual/news.texi: new distro/kernel support
	* doc/manual/prerequisites.texi: new distro/kernel support
	* texi/install.texi: update needed packages
	* scripts/texi/install.texi: update needed packages
	* openss7.spec.in: recognize Fedora 7 kernels

2007-06-19  Brian Bidulock  <bidulock@openss7.org>

	* m4/rpm.m4: changes for FC7
	* m4/kernel.m4: changes for FC7 and 2.6.21 kernel
	* m4/dist.m4: changes for FC7
	* scripts/modpost.sh: fix grep quirk
	* scripts/modsyms.sh: fix grep quirk
	* scripts/texi/install.texi: more CVS instructions
	* texi/install.texi: more CVS instructions

2007-06-16  Brian Bidulock  <bidulock@openss7.org>

	* scripts/modpost.sh: remove any later language
	* scripts/modsyms.sh: remove any later language